--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>tesseract.js-auto-add</title>
 
 	<!-- Disable tap highlight on IE -->
 	<meta name="msapplication-tap-highlight" content="no">
@@ -43,7 +43,7 @@
 <body>
 
 	<div class="container frontpage">
-		<h1>Adds any numbers seperated by a space or a new line in an image</h1>
+		<h1>Add any numbers seperated by a space or a new line in an image</h1>
 		<h2>Upload image</h2>
     <div id="progress-container" class="progress-container">
       Progress
